--- a/todo-modules/index.html
+++ b/todo-modules/index.html
@@ -11,13 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>ToDo App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="main.js" type="module"></script>
+    <script src="script.js" type="module"></script>
     <script src="helpers.js" type="module"></script>
     <script src="todoItem.js" type="module"></script>
     <script src="templates.js" type="module"></script>
     <script src="storage.js" type="module"></script>
     <script src="handlers.js" type="module"></script>
-<!--    <script src="script.js" type="module"></script>-->
 </head>
 <body>
 <div id="root">
